# randeli

./: .gitignore  .pre-commit-config.yaml  .pylintrc  Dockerfile  MANIFEST.in  README.md  ROADMAP.md  pyproject.toml  requirements.txt  run-samples.sh  setup.py
.github/workflows/: docker-publish.yml
randeli/: __init__.py  cli.py
randeli/cmds/: augment.py  bootstrap.py  config.py  inspect.py  map-fonts.py  setup.py
randeli/cmds/handlers/augment/: __init__.py  epub.py  epubeventhandler.py  pdf.py  pdfeventhandler.py
randeli/librandeli/: __init__.py  logging.py  notify.py  trace.py
randeli/librandeli/backend/: __init__.py  apryse.py  base.py  epub.py
randeli/policy/: __init__.py  actions.py  rules.py
samples/: Makefile  alt-font.md  bold.md  mixed.md  paragraph.md  simple.md
samples/augmented/epub/: alt-font.epub  bold.epub  mixed.epub  paragraph.epub  simple.epub
samples/epub/: alt-font.epub  bold.epub  mixed.epub  paragraph.epub  simple.epub
scripts/: build-image.sh  standard-args.sh
