[build-system]
requires = [
    "setuptools"
    , "wheel"
    , "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "randeli"
authors = [
    {name = "Richard Offer", email = "richard@whitequeen.com"},
]
description = "Augment EPUB & PDFs for aiding neurodivergent reading."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPLv2"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests"
    , "bandit"
    , "pylint"
    , "click"
    , "configobj"
    , "event-notifier"
    , "fonttools"
    , "pydantic"
    , "urllib3"
    , "bs4"
    , "loguru",
]
dynamic = ["version"]

[project.urls]
Repository = "https://github.com/badonhill-io/randeli"


[tool.setuptools.dynamic]
version = { file = "VERSION"}

[tool.setuptools]
packages = [
    "randeli"
    , "randeli.cmds"
    , "randeli.cmds.handlers"
    , "randeli.cmds.handlers.augment"
    , "randeli.librandeli"
    , "randeli.librandeli.backend"
    , "randeli.policy"
]

[tool.bandit]
exclude_dirs = []


[project.scripts]
randeli = "randeli.cli:cli"
