[build-system]
requires = [
    "setuptools"
    , "wheel"
    , "build"
]
build-backend = "setuptools.build_meta"

[project]
name = "randeli"
version = "0.9.0"
authors = [
    {name = "Richard Offer", email = "richard@whitequeen.com"},
]
description = "Augment EPUB & PDFs to aid reading by those who are neurodivergent (ADD/ADHD)."
readme = "README.md"
# Apryse doesn't support 3.12 or later (yet)
requires-python = "<=3.12"
license = {text = "GPLv2"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "requests"
    , "click"
    , "configobj"
    , "event-notifier"
    , "fonttools"
    , "pydantic"
    , "urllib3"
    , "bs4"
    , "lxml"
    , "loguru"
]

[project.urls]
Repository = "https://github.com/badonhill-io/randeli"


[tool.setuptools.dynamic]
version = { file = "VERSION"}

[tool.setuptools]
packages = [
    "randeli"
    , "randeli.cmds"
    , "randeli.cmds.handlers"
    , "randeli.cmds.handlers.augment"
    , "randeli.librandeli"
    , "randeli.librandeli.backend"
    , "randeli.policy"
]

[tool.bandit]
exclude_dirs = []


[project.scripts]
randeli = "randeli.cli:cli"
